fixed box alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,104 +1,112 @@
 body {
-display:flex;
-flex-direction: column;
-line-height: 1.3;
-background-color: #098789;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    background-color: #098789;
-    color: #2b1818;
-}
-
-header h1 {
-    font-size:250%;
-    text-decoration: underline;
-    padding-left: 30px;
-    padding-top:20px;
-    padding-right: 30px;
-    background-color: #142c37;
-    color: #098789;
-
-}
-  
-  nav ul {
-    display: flex;
-    justify-content: space-between;
-    min-width: 300px;
-    padding-right:20px;
-    padding-top:20px;
+  display:flex;
+  flex-direction: column;
+  line-height: 1.3;
+  background-color: #098789;
   }
   
-  nav a {
-    color: #492485;
-    font-weight: bold;
-    text-decoration: none;
+  header {
+      display: flex;
+      justify-content: space-between;
+      align-items:center;
+      background-color: #098789;
+      color: #2b1818;
   }
   
-  nav a:hover {
-    color: hsl(325, 75%, 47%);
+  header h1 {
+      font-size:250%;
+      text-decoration: underline;
+      padding-left: 40px;
+      padding-top:20px;
+      padding-right: 20px;
+      padding-bottom: 10px;
+      background-color: #142c37;
+      color: #098789;
+  
   }
   .top-background {
-    background-image: url("../images/background.png");
-    background-position: bottom;
-    background-size: cover;
-    background-attachment: fixed;
-    height: 250px;
-    position: relative;
+      background-image: url("../images/background.png");
+      background-position: bottom;
+      background-size: cover;
+      background-attachment: fixed;
+      height: 250px;
+      position: relative;
+    }
+    
+    .top-background h2 {
+      background-color: #142c37;
+      color: #098789;
+      font-size: 25px;
+      padding: 0 10px;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      position: absolute;
+      bottom: 20px;
+      right: 5%;
+    }
+    
+    nav ul {
+      display: flex;
+      justify-content: space-between;
+      min-width: 300px;
+      padding-right:20px;
+      padding-top:20px;
+    }
+    
+    nav a {
+      color: #492485;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    
+    nav a:hover {
+      color: #d21e87;
+      background-color: #142c37;
+      padding: 10px;
+    }
+  
+    
+    .main {
+              display: flex;
+              flex-direction:column;
+              align-items: center;
+              justify-content:center;
+          }
+          .main-containers {
+              display: flex;
+              justify-content: center;
+              width: 90%;
+              margin: 3px;
+          }
+          .left-side {
+              display: flex;
+              width: 20%;
+              color: #492485;
+              font-size: 150%;
+              box-sizing: content-box;
+              border-right: 4px solid transparent;
+              border-image: linear-gradient(to bottom,#142c37 20%, #19dac0) 1 100%;
+              padding: 20px;
+              margin-right: 20px;
+              width: 100px;
+              text-align: center;
+          }
+          .right-side {
+              display: flex;
+              
+              width: 70%;
+              padding:3px;
+          }
+           p {
+              display: inherit;
+              color: #19dac0;
+              padding-left: 50px;
   }
   
-  .top-background h2 {
-    background-color: #142c37;
-    color: #098789;
-    font-size: 25px;
-    padding: 0 10px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    position: absolute;
-    bottom: 20px;
-    right: 5%;
-  }
-
-  main {
-    display:flex;
-    flex-direction: column;
-    padding: 20px;
-}
-
-article {
-    display: inherit;
-}
-
-h3 {
-    color: #492485;
-    font-size: 150%;
-    box-sizing: content-box;
-    border-right: 4px solid transparent;
-    border-image: linear-gradient(to bottom,#142c37 20%, #19dac0) 1 100%;
-    padding: 20px;
-    margin-right: 20px;
-    width: 100px;
-    text-align: center;
-}
-
- article p {
-    color: #19dac0;
-    padding-left: 50px;
-}
-
-.card {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  border-style: solid;
-  border-width: 1px;
-}
-
-h4 {
-    color: #2b1818;
-    text-align: center;
-}
+          h4 {
+          color: #2b1818;
+          text-decoration: overline;
+          text-align: center;
+      }
+         
